--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.4",
+        "maatwebsite/excel": "^3.1",
         "mailgun/mailgun-php": "^4.2",
         "nyholm/psr7": "^1.8",
         "phpoffice/phpspreadsheet": "^1.29",
