--- a/composer.json
+++ b/composer.json
@@ -18,10 +18,12 @@
         "maatwebsite/excel": "^3.1",
         "mailgun/mailgun-php": "^4.2",
         "nyholm/psr7": "^1.8",
+        "phpmailer/phpmailer": "^6.9",
         "phpoffice/phpspreadsheet": "^1.29",
         "simplesoftwareio/simple-qrcode": "^4.2",
         "symfony/http-client": "^5.4",
-        "symfony/mailgun-mailer": "^5.4"
+        "symfony/mailgun-mailer": "^5.4",
+        "vlucas/phpdotenv": "^5.6"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
